# hippodid-python

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: claude_hippodid_direct.py  crewai_hippodid_memory.py  healer_matching.py  langchain_hippodid_memory.py  luxury_concierge.py  openai_agents_hippodid.py  requirements.txt  salesforce_to_hippodid.py
hippodid/: __init__.py  _http.py  _strategies.py  async_client.py  client.py  exceptions.py  models.py
tests/: conftest.py  test_agent_config.py  test_assemble_context.py  test_batch_create.py  test_character_crud.py  test_clone_character.py  test_errors.py  test_memory_ops.py  test_template_crud.py
