[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hippodid"
version = "0.2.0"
description = "Python SDK for the HippoDid character memory API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "SameThoughts", email = "hello@samethoughts.com" },
]
keywords = ["hippodid", "memory", "character", "ai", "agents", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://hippodid.com"
Documentation = "https://docs.hippodid.com"
Repository = "https://github.com/SameThoughts/hippodid-python"

[tool.hatch.build.targets.wheel]
packages = ["hippodid"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py38"
line-length = 100
